tests/failure/missing/semicolon_2.expected
syntax error: expected ";" before "AXIOM:": line 4, column 1 to line 4, column 6:
AXIOM:F;
^^^^^^

